--- a/src/components/Plans/LongTermPlans/LongTermPlan.module.css
+++ b/src/components/Plans/LongTermPlans/LongTermPlan.module.css
@@ -1,14 +1,12 @@
 .card {
-    margin: 3rem 10%;
+    margin: 1rem auto; /* 1rem away on the top&bottom, auto for centering the component */
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    /* width: 95%; */
+    width: 95%;
     max-width: 50rem;
     border-radius: 6px;
     background-color: #f8f9fa;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
-    float: left;
-    width: 50%;
 }
 
 .card h3 {
