--- a/src/components/Plans/LongTermPlans/LongTermPlan.module.css
+++ b/src/components/Plans/LongTermPlans/LongTermPlan.module.css
@@ -11,8 +11,9 @@
 
 .card h3 {
     font-weight: bold;
-    border-bottom: 2px solid black
-    /* border-bottom: 5px solid red; */
+    /* border-bottom: 2px solid black */
+    float: left;
+    padding: 0rem 35rem 0rem 0rem;
 }
 
 .card h5 {
