--- a/src/components/Plans/ShortTermPlans/ShortTermPlans.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlans.module.css
@@ -13,7 +13,7 @@
     font-weight: bold;
     /* border-bottom: 2px solid black; */
     float: left;
-    padding: 0rem 38rem 0rem 0rem;
+    padding: 0rem 32rem 0rem 0rem;
 }
 
 .card h5 {
@@ -23,4 +23,9 @@
 /* Show string with new lines */
 .card div {
     white-space: pre-wrap;
+}
+
+.card button {
+    /* up right down left */
+    margin: 0rem 1rem 0rem 0rem;
 }
