--- a/src/components/Plans/NewPlan/NewPlan.module.css
+++ b/src/components/Plans/NewPlan/NewPlan.module.css
@@ -5,3 +5,10 @@
 .hint:hover {
     color: black;
 }
+
+.expand_collapse {
+    float:left;
+    color: gray;
+    width: 20px;
+    height: 20px;
+}
