--- a/src/components/Layout/MainNavigation.module.css
+++ b/src/components/Layout/MainNavigation.module.css
@@ -1,16 +1,16 @@
 .header {
     width: 100%;
-    height: 5.5rem;
-    background-color: #f8f9fa;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    padding: 0 10%;
+    height: 6rem;
+    box-shadow: 0 1px 1px rgba(60, 60, 60, 0.2);
+    padding: 0 5%;
 }
 
 .logo {
-    font-family: 'Lato', sans-serif;
     font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
     color: black;
     margin: 0;
+    padding-top: 1rem;
     padding-bottom: 0.5rem; /* Add padding to the bottom */
 }
 
@@ -43,13 +43,12 @@
 
 .header a {
     text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
     color: rgba(0,0,0,.5);
-    font-weight: bold;
-    padding-bottom: 0.3rem; /* Add padding to the bottom */
+    padding-bottom: 0.45rem; /* Add padding to the bottom */
 }
 
 .header button {
-    font: inherit;
     background-color: transparent;
     border: none;
     color: rgba(0,0,0,.5);
