--- a/src/components/Dashboards/Today/TodayPlans.module.css
+++ b/src/components/Dashboards/Today/TodayPlans.module.css
@@ -1,7 +1,7 @@
 .container {
     margin-left: 5% !important;
     margin-top: 2rem;
-    max-width: 2000px;
+    max-width: 2000px !important;
 }
 
 .task {
