--- a/src/components/Dashboards/Today/TodayPlan.module.css
+++ b/src/components/Dashboards/Today/TodayPlan.module.css
@@ -6,6 +6,16 @@
     background-color: #ebf5f0; /* Adjust the highlight color as needed */
 }
 
+.plan_timer_button {
+    vertical-align: middle;
+    width:20px;
+    height:20px;
+}
+
+.plan_timer_button:hover {
+    transform: scale(1.8);
+}
+
 .calendar{
     position:absolute;
     z-index: 100;
