--- a/src/components/Dashboards/Today/TodayPlan.module.css
+++ b/src/components/Dashboards/Today/TodayPlan.module.css
@@ -7,11 +7,16 @@
 }
 
 .plan_timer_button,
-.plan_check_button,
 .plan_deletion_button {
     vertical-align: middle;
     width:20px;
     height:20px;
+}
+
+.plan_check_button {
+    vertical-align: middle;
+    width:15px;
+    height:15px;
 }
 
 .plan_timer_button:hover,
