Apply the highlight effect to width of the columns rather than the entire row

--- a/src/components/Dashboards/Today/TodayPlan.module.css
+++ b/src/components/Dashboards/Today/TodayPlan.module.css
@@ -6,6 +6,10 @@
     background-color: #ebf5f0; /* Adjust the highlight color as needed */
 }
 
+.placeholder_col {
+    background-color: white !important;
+}
+
 .completed {
     color: #6B7280;
 }
