--- a/src/components/UI/InlineEdit.module.css
+++ b/src/components/UI/InlineEdit.module.css
@@ -1,3 +1,7 @@
+.inline_edit {
+    padding: 0.5rem;
+}
+
 .inline_edit input:hover,
 .inline_edit textarea:hover {
     background-color: #d3d3d3;
@@ -8,18 +12,12 @@
 .input_description {
     width: 100%;
     text-align: left;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 8px;
 }
 
 .input_title {
-    background-color: transparent;
-    border: 0;
-    padding: 8px;
     font-weight: bold;
     font-size:large;
-}
-
-.input_description {
-    background-color: transparent;
-    border: 0;
-    padding: 8px;
 }
