Adjust css style for Sprint submit button

--- a/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
@@ -4,6 +4,12 @@
 
 .submit_button {
     padding-left: 0.5rem;
+    cursor: pointer;
+    font: inherit;
+}
+
+.submit_button:hover {
+    filter: opacity(0.6);
 }
 
 .input_form input:hover,
