--- a/src/components/Plans/ShortTermPlans/ShortTermPlan.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlan.module.css
@@ -8,18 +8,28 @@
     padding: 1rem;
 }
 
-.card h3 {
-    font-weight: bold;
-    /* border-bottom: 2px solid black; */
-    float: left;
-    padding: 0rem 38rem 0rem 0rem;
+.header {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 0.5rem;
 }
 
-.card h5 {
-    margin: 1rem 0 0 0;
+.card h3 {
+    margin: 0;
 }
 
 /* Show string with new lines */
 .card div {
     white-space: pre-wrap;
+}
+
+.edit,
+.done {
+    cursor: pointer;
+}
+
+.edit:hover,
+.done:hover {
+    filter: opacity(0.6);
 }
