--- a/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
@@ -31,3 +31,8 @@
     font-weight: bold;
     font-size:large;
 }
+
+/* Pure text in react-markdown is transformed to html <p> element */
+p {
+    margin: 0;
+}
