--- a/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
@@ -32,6 +32,23 @@
     font-size:large;
 }
 
+.header {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
+.edit,
+.done {
+    cursor: pointer;
+}
+
+.edit:hover,
+.done:hover {
+    filter: opacity(0.6);
+}
+
 /* Pure text in react-markdown is transformed to html <p> element */
 p {
     margin: 0;
