Revert "Hide the title 'Sprint' after creating a new sprint"
This reverts commit eaea1c68523d1db72c443650d66f1f430f0558eb.

--- a/src/components/Plans/ShortTermPlans/ShortTermPlan.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlan.module.css
@@ -8,6 +8,13 @@
     padding: 1rem;
 }
 
+.header {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
 .card h3 {
     margin: 0;
 }
@@ -15,4 +22,14 @@
 /* Show string with new lines */
 .card div {
     white-space: pre-wrap;
+}
+
+.edit,
+.done {
+    cursor: pointer;
+}
+
+.edit:hover,
+.done:hover {
+    filter: opacity(0.6);
 }
