--- a/src/components/Plans/NewPlan/NewLongTermPlan.module.css
+++ b/src/components/Plans/NewPlan/NewLongTermPlan.module.css
@@ -1,62 +1,38 @@
-.card {
-    margin: 3rem auto;
-    width: 95%;
-    max-width: 25rem;
-    border-radius: 6px;
-    background-color: #f8f9fa;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    text-align: center;
+.input_form {
+    padding: 0.5rem;
 }
 
-.card h1 {
-    text-align: center;
-    font-weight: bold;
-}
-
-.control {
-    margin-bottom: 0.5rem;
-}
-
-.control label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-}
-
-.control input,
-.control textarea {
-    font: inherit;
-    border-radius: 4px;
-    border: 1px solid black;
-    width: 100%;
-    text-align: left;
-    padding: 0.25rem;
-}
-
-.actions {
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.actions button {
+.submit_button {
+    padding-left: 0.5rem;
     cursor: pointer;
     font: inherit;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 4px;
-    padding: 0.5rem 2.5rem;
 }
 
-.actions button:hover {
+.submit_button:hover {
     filter: opacity(0.6);
 }
 
-.actions .toggle {
-    margin-top: 1rem;
-    background-color: transparent;
-    border: none;
-    padding: 0.15rem 1.5rem;
+.input_form input:hover,
+.input_form textarea:hover {
+    background-color: #d3d3d3;
+    cursor: pointer;
+}
+
+.input_title,
+.input_description {
+    width: 100%;
+    text-align: left;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 8px;
+}
+
+.input_title {
+    font-weight: bold;
+    font-size:large;
+}
+
+/* Pure text in react-markdown is transformed to html <p> element */
+p {
+    margin: 0;
 }
