Adjust the size of the textarea input

--- a/src/components/Plans/NewPlan/NewLongTermPlan.module.css
+++ b/src/components/Plans/NewPlan/NewLongTermPlan.module.css
@@ -32,6 +32,11 @@
     font-size:large;
 }
 
+.input_description {
+    height: 15rem;
+    resize: vertical;
+}
+
 /* Pure text in react-markdown is transformed to html <p> element */
 p {
     margin: 0;
