--- a/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
+++ b/src/components/Plans/ShortTermPlans/ShortTermPlanContent.module.css
@@ -36,6 +36,11 @@ form {
     font-size:large;
 }
 
+.input_description {
+    height: 15rem;
+    resize: vertical;
+}
+
 /* Pure text in react-markdown is transformed to html <p> element */
 p {
     margin: 0;
